--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -72,12 +72,12 @@
         <script src="/public/mobile-interactions.js"></script>
         <script src="/public/toggle.js"></script>
         <script src="/public/markdown-actions.js"></script>
-        <script src="/public/tagui.js"></script>
         <script src="/public/helpers/index.js"></script>
 
         <!-- // require '/public/models/*' -->
         <script src="/public/models/post.js"></script>
         <script src="/public/models/user.js"></script>
+        <script src="/public/models/tag.js"></script>
         <script src="/public/models/widget.js"></script>
         <script src="/public/models/settings.js"></script>
         <!-- // require '/public/views/*' -->
@@ -85,6 +85,7 @@
         <script src="/public/views/dashboard.js"></script>
         <script src="/public/views/blog.js"></script>
         <script src="/public/views/editor.js"></script>
+        <script src="/public/views/editor-tag-widget.js"></script>
         <script src="/public/views/login.js"></script>
         <script src="/public/views/settings.js"></script>
         <script src="/public/views/debug.js"></script>
