--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -32,13 +32,12 @@
 </section>
 <footer id="publish-bar">
     <nav>
-        <section id="entry-categories" href="#" class="left">
-            <label class="category-label" for="categories"><span class="hidden">Categories</span></label>
-            <div class="categories"></div>
-            <input type="hidden" class="category-holder" id="category-holder">
-            <input class="category-input" id="categories" type="text"
-                   data-populate-hidden="#category-holder" data-input-behaviour="tag" data-populate=".categories" />
-            <ul class="suggestions overlay" data-populate=".categories"></ul>
+        <section id="entry-tags" href="#" class="left">
+            <label class="tag-label" for="tags"><span class="hidden">Tags</span></label>
+            <div class="tags"></div>
+            <input type="hidden" class="tags-holder" id="tags-holder">
+            <input class="tag-input" id="tags" type="text" data-input-behaviour="tag" />
+            <ul class="suggestions overlay"></ul>
         </section>
         <div class="right">
             <section id="entry-actions" class="splitbutton-save">
