rename helpers paginate -> pagination, dateFormat -> date
closes #381

- renamed entries for dateFormat in helpers to date
- renamed entries for paginate in helpers  and unit tests to pagination

--- a/core/client/tpl/list-item.hbs
+++ b/core/client/tpl/list-item.hbs
@@ -3,7 +3,7 @@
     <section class="entry-meta">
         <time datetime="2013-01-04" class="date">
             {{#if published}}
-                Published {{dateFormat published_at timeago="True"}}
+                Published {{date published_at timeago="True"}}
             {{else}}
                 <span class="status-draft">Draft</span>
             {{/if}}
