--- a/ghost/admin/tpl/list-item.hbs
+++ b/ghost/admin/tpl/list-item.hbs
@@ -3,7 +3,7 @@
     <section class="entry-meta">
         <time datetime="2013-01-04" class="date">
             {{#if published}}
-                Published {{dateFormat published_at timeago="True"}}
+                Published {{date published_at timeago="True"}}
             {{else}}
                 <span class="status-draft">Draft</span>
             {{/if}}
