--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -1224,7 +1224,7 @@ main {
         background: $blue;
 
         &.fail {
-            background: $orange;
+            background: $red;
         }
     }
 }
