--- a/ghost/admin/tpl/preview.hbs
+++ b/ghost/admin/tpl/preview.hbs
@@ -15,5 +15,5 @@
     </section>
 </header>
 <section class="content-preview-content">
-    <div class="wrapper">{{{content}}}</div>
+    <div class="wrapper"><h1>{{{title}}}</h1>{{{content}}}</div>
 </section>
