--- a/ghost/admin/assets/sass/layouts/editor.scss
+++ b/ghost/admin/assets/sass/layouts/editor.scss
@@ -265,6 +265,8 @@
             left: 0;
             padding: 60px 40px 40px 40px;
             overflow: auto;
+            word-break: break-word;
+            hyphens: auto;
 
             // Tweak padding for smaller screens
             @include breakpoint($netbook) {padding-top: 20px;}
