Fixed overzealous word breaking
Closed #514
Reverting change from @c46a0c6 where I moved the new word breaking CSS rules to the body tag to apply everywhere. This doesn't play nicely everywhere - so this change moves them back to just the content preview areas where they are needed.

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -265,6 +265,8 @@
             left: 0;
             padding: 60px 40px 40px 40px;
             overflow: auto;
+            word-break: break-word;
+            hyphens: auto;
 
             // Tweak padding for smaller screens
             @include breakpoint($netbook) {padding-top: 20px;}
