Correcting code attribution reference

--- a/core/client/assets/sass/modules/icons.scss
+++ b/core/client/assets/sass/modules/icons.scss
@@ -35,7 +35,7 @@
 
 /* 
  * Epic dynamic icon element by Eric Eggert, this thing is so fucking cool it's
- * actually unreal. http://cl.ly/O40t 
+ * actually unreal. - bit.ly/TJwPPo
  */
 
 %icon:before, 
