--- a/ghost/admin/assets/sass/layouts/editor.scss
+++ b/ghost/admin/assets/sass/layouts/editor.scss
@@ -239,7 +239,8 @@
         .cm-comment,
         .cm-quote,
         .cm-number,
-        .cm-atom {
+        .cm-atom,
+        .cm-tag {
             color: #000;
             font-weight: bold;
         }
