Move pagination to class rather than ID
Pagination could conceivably be used in more than one place on a page (eg. both top and bottom). For that reason it should probably have a class rather than an ID.

--- a/core/server/helpers/tpl/pagination.hbs
+++ b/core/server/helpers/tpl/pagination.hbs
@@ -1,5 +1,5 @@
 
-<nav id="pagination" role="pagination">
+<nav class="pagination" role="pagination">
     {{#if next}}
         <div class="previous-page"><a href="/page/{{next}}/">Older Posts →</a></div>
     {{/if}}
