--- a/ghost/admin/assets/sass/modules/global.scss
+++ b/ghost/admin/assets/sass/modules/global.scss
@@ -1229,7 +1229,7 @@ main {
         background: $blue;
 
         &.fail {
-            background: $orange;
+            background: $red;
         }
     }
 }
