Added theme switcher to settings/general
closes #488 and #107
- added dropdown for theme selection on general page
- added GET /api/v0.1/themes to retrieve available themes
- modified settings model to get available themes
- modified updateSettignsCache to remove path from settings.activeTheme

--- a/core/client/tpl/settings/general.hbs
+++ b/core/client/tpl/settings/general.hbs
@@ -50,6 +50,15 @@
                 </select>
             </div>
 
+            <div class="form-group">
+                <label for="activeTheme"><strong>Theme</strong></label>
+                <select id="activeTheme" name="general[activeTheme]">
+                    {{#each availableThemes}}
+                        <option value="{{ name }}" {{#if active}}selected{{/if}}>{{ name }}</option>
+                    {{/each}}
+                </select>
+            </div>
+
         </fieldset>
 
         <hr />
