--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -80,6 +80,7 @@
         <script src="/public/models/user.js"></script>
         <script src="/public/models/widget.js"></script>
         <script src="/public/models/settings.js"></script>
+        <script src="/public/models/themes.js"></script>
         <!-- // require '/public/views/*' -->
         <script src="/public/views/base.js"></script>
         <script src="/public/views/dashboard.js"></script>
