--- a/core/client/assets/sass/modules/icons.scss
+++ b/core/client/assets/sass/modules/icons.scss
@@ -171,6 +171,7 @@ $i-weather-sun:     \e039;
 $i-weather-partial: \e03a;
 $i-weather-snow:    \e03b;
 $i-weather-cloudy:  \e03c;
+$i-lightning:       \e03d;
 
 
 /* =============================================================================
