--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -43,7 +43,7 @@
         <div class="right">
             <section id="entry-actions" class="splitbutton-save">
                 <button type="button" class="button-save js-post-button"></button>
-                <a class="options up" href="#"><span class="hidden">Options</span></a>
+                <a class="options up" data-toggle="ul" href="#"><span class="hidden">Options</span></a>
                 <ul class="editor-options overlay" style="display:none">
                     <li data-set-status="published"><a href="#">Publish Now</a></li>
                     <li data-set-status="queue"><a href="#">Add to Queue</a></li>
