Be smarter about how we line up markdown code with the live preview
Fixes #481
Fixes #535

Currently we sync these two panes by working out how many % the user is down the left pane, and extending that ratio to the right side. This is good enough for text, but in long posts, or those with elements like images it can go askew.

These changes split both the markdown and the preview into sections (divided by headings). It determines that the user is X percent through section Y, and then applies that same scroll to the other pane.

--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -14,8 +14,11 @@
             Markdown
             <a class="markdown-help" href="#"><span class="hidden">What is Markdown?</span></a>
         </header>
-        <section class="entry-markdown-content">
+        <section id="entry-markdown-content-actual" class="entry-markdown-content">
             <textarea id="entry-markdown"></textarea>
+        </section>
+        <section id="entry-markdown-content-shadow" class="entry-markdown-content">
+            <textarea id="shadow-markdown"></textarea>
         </section>
     </section>{{!.entry-markdown}}
 
