Added Post Settings Menu to Editor screen, with field to edit permalink
closes #370
- Added new Backbone view for post settings menu
- Moved sass styles to global.scss for post settings menu items
- Added field to change post slug (permalink) using existing slug
  validation

Email errors & cleanup

closes #618

- don't send a welcome email. This appeared to be breaking tests.
- make sure we handle errors from sending emails properly
- use promises when adding notifications

Improving underscore handling

Additional changes to how underscores are handled.
This more closely matches codemirror, but is still not 100%.

Mail settings are per environment

closes #624

- example mail setting in development config
- updated mail module & tests

Fix for settings view

no issue
- removed/added availableThemes before/after saving the model

Corrected typo in code documentation

Corrected typo in code documentation

-Changed "atricle" to "article"

Removing api calls from server side

 closes #603, issue #395

- Changed hard-coded 'JOE BLOGGS' to use author data
- We still had api calls loading data server side before rendering pages.. which is unnecessary.
- Only thing using this was editor title, which is now populated client side
- May improve content screen load time.

Adds modal Image uploader on settings page

issue #432

adds a modal template for image uploads
adds buttons to settings page to upload images for blog logo and icon
once image is uploaded displays an 'X' to reset back to dropzone
saves image and renders settings page.

ToDo

add url field when clicking on url icon

fix position of 'X' for both settings and editor

Design fixes for the user settings panel

* Bio field now counts down.
* Bio filed count now turns red when < 20
* Cover image now has gradient
* Change button now has square corners
* Removed "forgot password" link
* Change password button is now red
* Change password button is now aligned with the form
* Hover state on the profile picture now re

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -521,7 +521,15 @@ body.zen {
 
 }
 
-#entry-settings {
+#entry-controls {
+    @include box-sizing(border-box);
+    display: inline-block;
+    position: relative;
+    padding: 0;
+    z-index: 1;
+}
+
+.entry-settings {
     @include icon($i-settings, 1.1em){vertical-align: 0;};
     @include box-sizing(border-box);
     display: inline-block;
@@ -535,9 +543,9 @@ body.zen {
     }
 }
 
-#entry-settings-menu {
+.entry-settings-menu {
     position: absolute;
-    bottom: 50px;
+    bottom: 40px;
     right: -5px;
 }
 
