--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -84,6 +84,7 @@
         <!-- // require '/public/views/*' -->
         <script src="/public/views/base.js"></script>
     <script src="/public/models/uploadModal.js"></script>
+        <script src="/public/views/post-settings.js"></script>
         <script src="/public/views/blog.js"></script>
         <script src="/public/views/editor.js"></script>
         <script src="/public/views/editor-tag-widget.js"></script>
