--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -40,6 +40,30 @@
             <ul class="suggestions overlay"></ul>
         </section>
         <div class="right">
+
+            <section id="entry-controls">
+                <a class="entry-settings" href="#" data-toggle=".menu-right"><span class="hidden">Post Settings</span></a>
+                <ul class="entry-settings-menu menu-right overlay">
+                    <li class="post-setting">
+                        <div class="post-setting-label">
+                            <label for="url">URL</label>
+                        </div>
+                        <div class="post-setting-field">
+                            <input class="post-setting-slug" type="text" value="" />
+                        </div>
+                    </li>
+                    <!--<li class="post-setting">
+                        <div class="post-setting-label">
+                            <label for="url">Pub Date</label>
+                        </div>
+                        <div class="post-setting-field">
+                            <input class="post-setting-date" type="text" value=""><span class="post-setting-calendar"></span>
+                        </div>
+                    </li>-->
+                    <li><a href="#" class="delete">Delete</a></li>
+                </ul>
+            </section>
+
             <section id="entry-actions" class="splitbutton-save">
                 <button type="button" class="button-save js-post-button"></button>
                 <a class="options up" data-toggle="ul" href="#"><span class="hidden">Options</span></a>
