--- a/ghost/admin/assets/sass/layouts/settings.scss
+++ b/ghost/admin/assets/sass/layouts/settings.scss
@@ -172,6 +172,10 @@
             margin-left: 15px;
         }
 
+        img {
+            max-width: 100%;
+        }
+
         display: none;
         &.active {display:block;}
 
