--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -5,7 +5,7 @@
         <section class="box entry-title">
             <input type="text" id="entry-title"
                    placeholder="{{e "editor.entry_title.placeholder" "The Post Title Gets Inserted Up Here"}}"
-                   value="{{title}}" tabindex="1">
+                   value="" tabindex="1">
         </section>
     </header>
 
