--- a/ghost/admin/assets/sass/layouts/users.scss
+++ b/ghost/admin/assets/sass/layouts/users.scss
@@ -129,6 +129,16 @@ User Profile
         position: relative;
         width: 100%;
         height: 300px;
+
+        &:after {
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            height: 110px;
+            @include linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 100%);
+        }
     }
 
     .cover-image {
@@ -141,7 +151,9 @@ User Profile
 
         img {
             position: absolute;
-            max-width: 100%;
+            min-width: 100%;
+            min-height: 100%;
+
         }
     }
 
@@ -150,6 +162,7 @@ User Profile
         right: 40px;
         bottom: 40px;
         background: rgba(0,0,0,0.4);
+        border-radius: 0;
         color: #FFFFFF;
         z-index: 2;
 
