--- a/ghost/admin/tpl/settings/general.hbs
+++ b/ghost/admin/tpl/settings/general.hbs
@@ -57,9 +57,14 @@
                 <label for="activeTheme"><strong>Theme</strong></label>
                 <select id="activeTheme" name="general[activeTheme]">
                     {{#each availableThemes}}
-                        <option value="{{ name }}" {{#if active}}selected{{/if}}>{{ name }}</option>
+                        <option value="{{name}}" {{#if active}}selected{{/if}}>{{name}}</option>
                     {{/each}}
                 </select>
+            </div>
+            <div class="form-group">
+                <label for="postsPerPage"><strong>Posts per page</strong></label>
+                <input id="postsPerPage" name="general[postsPerPage]" type="number" value="{{postsPerPage}}">
+                <p>Number of posts per page displayed</p>
             </div>
 
         </fieldset>
