--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -972,6 +972,10 @@ body.blur > *:not(#modal-container) {
         }
     }
 
+    button {
+        min-width: 100px;
+    }
+
     @include breakpoint($mobile) {
         width: 100%;
     }
