Added styling enhancements to image uploader

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -1260,12 +1260,15 @@ main {
     overflow: hidden;
     height: auto;
     color: $brown;
+    background: rgba(0,0,0,0.1);
+    border-radius: 2px;
 
     input {
         position: absolute;
         left: 9999px;
         opacity: 0;
     }
+
     a {
         z-index: 10000;
         color: $brown;
@@ -1275,14 +1278,19 @@ main {
             color: $darkgrey;
         }
     }
+
     img {
+        display: block;
         max-width: 100%;
+        margin: 0 auto;
+        line-height: 0;
     }
+
     .image-cancel {
         @include icon($i-x, 16px);
         position: absolute;
         color: white;
-        text-shadow: rgba(0,0,0,0.5) 0 0 1px;
+        text-shadow: rgba(0,0,0,0.3) 0 0 3px;
         top: 10px;
         right: 10px;
         text-decoration: none;
@@ -1292,7 +1300,8 @@ main {
             color: white;
         }
     }
-}
+
+}//.pre-image-uploader
 
 
 /* ==========================================================================
