Adding rel next & prev to pagination
- useful for SEO & some devices use it too

--- a/core/server/helpers/tpl/pagination.hbs
+++ b/core/server/helpers/tpl/pagination.hbs
@@ -1,9 +1,9 @@
 <nav class="pagination" role="pagination">
     {{#if prev}}
-        <a class="newer-posts" href="{{pageUrl prev}}">&larr; Newer Posts</a>
+        <a class="newer-posts" href="{{pageUrl prev}}" rel="next">&larr; Newer Posts</a>
     {{/if}}
     <span class="page-number">Page {{page}} of {{pages}}</span>
     {{#if next}}
-        <a class="older-posts" href="{{pageUrl next}}">Older Posts &rarr;</a>
+        <a class="older-posts" href="{{pageUrl next}}" rel="prev">Older Posts &rarr;</a>
     {{/if}}
 </nav>
