Fixed the position of notifications

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -835,6 +835,15 @@ nav {
 /* ==========================================================================
    Notifications
    ========================================================================== */
+
+#flashbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+}
+
 .js-bb-notification {
     @include transform(translateZ(0));
 }
