Temporarily remove unused Post Menu options

--- a/core/server/views/content.hbs
+++ b/core/server/views/content.hbs
@@ -3,13 +3,7 @@
     <section class="content-list js-content-list">
       <header class="floatingheader">
           <section class="content-filter">
-              <a class="dropdown" href="#" data-toggle=".menu-drop">All Posts</a>
-              <ul class="menu-drop overlay" style="display:none;">
-                  <li class="active"><a href="#">All Posts</a></li>
-                  <li><a href="#">Recently Edited</a></li>
-                  <li><a href="#">By Author...</a></li>
-                  <li><a href="#">Search</a></li>
-              </ul>
+              <span>All Posts</span>
           </section>
           <a href="/ghost/editor" class="button button-add"><span class="hidden">New Post</span></a>
       </header>
